fixing header on mobile: logo was breaking onto the next line.

--- a/app/assets/stylesheets/newbranding.css.scss
+++ b/app/assets/stylesheets/newbranding.css.scss
@@ -312,6 +312,7 @@ body.registrations.new, body.registrations.create, body.sessions, body.passwords
     .brand {
       margin-top: 10px;
       margin-left: 0;
+      padding-right: 0;
     }
 
     .nav li  {
